Set the new editor as default.

There are still things to be implemented/fixed in the new editor but it's
good enough for git/master.
BUG: 285826
BUG: 289334
FIXED-IN: 2.2